# meta-agent

./: .gitignore  docker-compose.yml  pyproject.toml
config/: agents.yaml
src/: config.py  main.py
src/agents/: base.py  coder.py  researcher.py  writer.py
src/api/: routes.py
src/event_bus/: bus.py
src/factory/: agent_factory.py
src/meta_agent/: evaluator.py  orchestrator.py  planner.py  synthesizer.py
src/shared_state/: redis_store.py
src/tools/: __init__.py  registry.py
src/tools/prebuilt/: code_executor.py  file_reader.py  web_search.py
src/types/: agent_spec.py  task.py
tests/: conftest.py  test_agent_factory.py  test_agents.py  test_evaluator.py  test_event_bus.py  test_orchestrator.py  test_planner.py  test_redis_store.py  test_routes.py  test_synthesizer.py  test_tools.py  test_types.py
