[project]
name = "meta-agent"
version = "0.1.0"
description = "Dynamic Meta-Agent System"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2,<1.0",
    "langchain-google-genai>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "docker>=7.0,<8.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
